<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    card_view:cardCornerRadius="5dp"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movieImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:scaleType="fitStart"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/title"
            android:background="?android:selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_alignRight="@+id/movieImage"
            />

        <TextView
            android:id="@+id/rating"
            android:background="?android:selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_below="@+id/title"
            android:layout_alignRight="@+id/movieImage"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/release"
            android:background="?android:selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_below="@+id/rating"
            android:layout_alignRight="@+id/movieImage"
            android:layout_margin="5dp"
            />
        <TextView
            android:id="@+id/genre"
            android:background="?android:selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_below="@+id/release"
            android:layout_alignRight="@+id/movieImage"
            android:layout_margin="5dp"
            />

    </RelativeLayout>

</android.support.v7.widget.CardView>