<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="development.alberto.com.rxjava2_mvp.case1.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".case1.MainActivity" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>
